--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -9,7 +9,7 @@
                     </div>
                 </div>
                 <div class="level-right">
-                    <img src="/images/logo-square-small.png" class="is-hidden-mobile">
+                    <img src="{{ site.baseurl }}/images/logo-square-small.png" class="is-hidden-mobile">
                 </div>
             </div>
         </div>
