--- a/_sass/base-styles.scss
+++ b/_sass/base-styles.scss
@@ -70,7 +70,7 @@ div.float-right {
   .hero-body {
     padding: 10px 1.5rem;
     height: $rism-simple-hero-height;
-    h1 {
+    span {
       font-size: 24px;
       font-weight: 700;
     }
